--- a/client/main.html
+++ b/client/main.html
@@ -1,11 +1,23 @@
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <title>slack</title>
-  <link href='http://fonts.googleapis.com/css?family=Lato:400,700,900' rel='stylesheet' type='text/css'>
+  <!-- <link href='http://fonts.googleapis.com/css?family=Lato:400,700,900' rel='stylesheet' type='text/css'> -->
+  <link
+    href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,700,300"
+    rel="stylesheet"
+    type="text/css"
+  />
+  <link
+    rel="stylesheet prefetch"
+    href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css"
+  />
+  <link
+    rel="stylesheet prefetch"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.2/css/font-awesome.min.css"
+  />
 </head>
 
 <body>
   {{> HomeLayout}}
 </body>
-
